--- a/config/database.yml
+++ b/config/database.yml
@@ -51,7 +51,7 @@ production:
   <<: *default
   database: wolcutracks_production
   username: wolcutracks
-  password: jhpj6vqz
+  password: jhpj6vqzw
   adapter: mysql2
   encoding: utf8
   pool: 5  
