--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">= 0.10"
+  },
   "bugs": {
     "url": "https://github.com/rcamposp/wolcu-tracks/issues"
   },
